--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "LUGMessageBoard",
+  "name": "application-name",
   "version": "0.0.1",
-  "dependencies": {
-    "express": "~3.2.5",
-    "mongoskin": "~0.6.0"
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
   },
-  "engines": {
-    "node": "0.10.x",
-    "npm": "1.2.x"
+  "dependencies": {
+    "express": "3.4.8",
+    "jade": "*"
   }
 }
